--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,70 @@ img{
 #menu-bars{
     display: none;
 }
+.banner{
+    position: relative;
+}
+.banner-container{
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 255, 0.459); */
+    position: absolute;
+    top: 0;
+}
+.banner-content{
+    width: 80%;
+    height: 100%;
+    /* background-color: rgba(255, 255, 255, 0.39); */
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    left: 3.12em;
+}
+.banner-text{
+    width: 50%;
+    height: 100%;
+    /* background-color: blueviolet; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+.banner-text h1{
+    font-size: 5em;
+}
+.banner-text p{
+    font-size:1.56em;
+}
+.banner-text a{
+    color: #fff;
+    font-size: 1.56em;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: var(--red);
+    padding: 0.3em 1.0em;
+    border-radius: 0.31em;
+    margin-top: 1.5em;
+}
+.games{
+    width: 100%;
+    height: 7.5em;
+    /* background-color: green; */
+}
+.games ul{
+    width: 100%;
+    /* background-color: rgba(76, 0, 130, 0.568); */
+    list-style-type: none;
+}
+.games img{
+    width: 170px;
+}
+.games ul a:hover img{
+    transition: 0.5s;
+    transform: scale(1.);
+}
+
 
 /* Até 1199px */
 @media screen and (max-width: 74.93em){
