--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@ img{
 .menu a:hover{
     background-color: var(--red);
     text-shadow:0 0 5px #fff ;
-    text-decoration: underline;
 }
 #menu-bars{
     display: none;
@@ -129,7 +128,52 @@ img{
 }
 .games ul a:hover img{
     transition: 0.5s;
-    transform: scale(1.);
+    transform: scale(1.3);
+}
+.about{
+    height:31.25em;
+    background-color:var(--blue);
+    position: relative;
+}
+.about-angulation{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.angulation{
+    height: 24.46em;
+    width: 100%;
+    background-color: var(--background);
+    
+    transform:skewY(-4deg)
+}
+.container-about{
+    color: white;
+    position: absolute;
+    top: 0;
+}
+.content-about{
+    width: 85%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.text-about{
+    width: 50%;
+    text-align: justify;
+    margin-top: 2.9em;
+}
+.text-about h2{
+    margin-bottom: 1em;
+    font-size: 2.18em;
+}
+.text-about p{
+    font-size:1.1em;
+}
+.content-about img{
+    max-width: 31.87em;
 }
 
 
