--- a/css/style.css
+++ b/css/style.css
@@ -116,11 +116,9 @@ img{
 .games{
     width: 100%;
     height: 7.5em;
-    /* background-color: green; */
 }
 .games ul{
     width: 100%;
-    /* background-color: rgba(76, 0, 130, 0.568); */
     list-style-type: none;
 }
 .games img{
@@ -175,6 +173,42 @@ img{
 .content-about img{
     max-width: 31.87em;
 }
+.partidas-aovivo::after{
+    content: '';
+    border: solid 1px #fff;
+    height: 2em ;
+    margin-left: 1em;
+}
+.partidas-aovivo, .games-embreve{ 
+    display: flex;
+    /* background-color: rgba(153, 205, 50, 0.514); */
+    color: #fff;
+    align-items: center;
+    font-size: 1.87em;
+    justify-content: space-between;
+}
+.partida{
+    width: 9.5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 1em;
+}
+.time1, .time2{
+    display: flex;
+    align-items: center;
+    /* background-color: antiquewhite; */
+}
+.partida img{
+    width: 1.87em;
+}
+.time1 img{
+    margin-left: 0.5em;
+}
+.time2 img{
+    margin-right: 0.5em;
+}
+
 
 
 /* Até 1199px */
