--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ img{
     /* background-color: aliceblue; */
 }
 .content{
-    width: 100%;
+    width: 95%;
     max-width: 75em;
     height: 100%;
     /* background-color:aqua; */
@@ -295,6 +295,56 @@ img{
 }
 .matches-bg > p{
     align-self: center;
+}
+.links-footer{
+    width: 33%;
+    display: flex;
+    justify-content: space-around;
+}
+.links{
+    color: white;
+}
+.links a{
+    text-decoration: none;
+    color: white;
+}
+.logo-rodape{
+    width: 19.06em;
+}
+.socials h2{
+    color: white;
+}
+.siga-nos{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 0.8em;
+}
+.socials form{
+    display: flex;
+}
+.socials input[type="email"]{
+    width: 12.1875em;
+    height: 2.3125em;
+}
+.socials input[type="email"]::placeholder{
+    color: #b8b3b3;
+    font-weight: bold;
+}
+.socials input[type="submit"]{
+    /* height: 1.7em; */
+    width: 9.75em;
+    color: white;
+    background-color: #8326EF;
+    font-size:1.1em;   
+}
+.socials > h2{
+    font-size: 0.875em;
+    margin-bottom: 0.5em;
+}
+
+.rodape{
+    padding: 1em 0;
 }
 
 /* Até 1199px */
